[package]
name = "chio"
version = "0.2.0"
edition = "2021"
authors = ["Arjun <arjunmundamani@gmail.com>"]
description = "A CLI tool for setting up pinocchio program project"
repository = "https://github.com/4rjunc/solana-chio"
license = "MIT"
readme = "README.md"
keywords = ["cli", "scaffold", "template", "project", "generator", "solana", "pinocchio"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "chio"
path = "src/lib.rs"

[[bin]]
name = "chio"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.12.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
